# goodwe_hk3000_ew11

./: LICENSE  README.md  __init__.py  config_flow.py  hacs.json  manifest.json  modbus_reader.py  pyproject.toml  strings.json
.github/workflows/: tests.yml
custom_components/goodwe_hk3000_ew11/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  ew11_api.py  manifest.json  modbus_reader.py  sensor.py  strings.json
custom_components/goodwe_hk3000_ew11/translations/: en.json
custom_components/goodwe_hk3000_rs485bridge/: __init__.py  bridge_api.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  modbus_reader.py  sensor.py
custom_components/goodwe_hk3000_rs485bridge/translations/: en.json
tests/: __init__.py  conftest.py  test_bridge_api.py  test_button.py  test_config_flow.py  test_coordinator.py  test_ew11_api.py  test_modbus_reader.py  test_sensor.py
translations/: en.json
