[project]
name = "goodwe-hk3000-rs485bridge"
version = "0.9.33"
description = "Home Assistant integration for GoodWe HK3000 Smart Meter via RS485 TCP bridge"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
target-version = "py312"
line-length = 100
